resolved bug on mobile version

--- a/testimonials-grid-section-main/style.css
+++ b/testimonials-grid-section-main/style.css
@@ -25,7 +25,7 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
 }
 
 a {
@@ -120,6 +120,10 @@ footer {
 }
 
 @media screen and (min-width: 900px) {
+    body {
+        height: 100vh; 
+    }
+
     .root {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr 1fr;
